Release v1.0 with pathfinding, scene tracking, and runestone highlights.
Adds A* pathing with agility shortcuts, event-driven scene tracking for altars and runestones, and reliable dense runestone selection via varbits for the full Arceuus blood/soul rotation helper.